k8s/domains/accounts/deploy/postgres/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: postgres
spec:
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      automountServiceAccountToken: false
      containers:
        - name: postgres
          image: docker.io/library/postgres:18.6@sha256:06cad38a5d9f5d24b4d83d86def30795d5e4b757fedbf5281172b576dedcd941
          readinessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d accounts
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3

          livenessProbe:
            exec:
              command:
                - sh
                - -c
                - pg_isready -U postgres -d accounts
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
