k8s/domains/accounts/deploy/postgres/base/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy

metadata:
  name: postgres
spec:
  podSelector:
    matchLabels:
      app: postgres
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: api
        - podSelector:
            matchLabels:
              app: migrations
        - podSelector:
            matchLabels:
              app: relay
      ports:
        - protocol: TCP
          port: 5432
